[package]
name = "transceiver-controller"
version = "0.1.0"
edition = "2021"
default-run = "xcvradm"

[features]
api-traits = [ "dep:schemars", "transceiver-decode/api-traits" ]

[dependencies]
anyhow = "1"
hubpack = "0.1.0"
serde = "1"
slog-async = "2"
slog-term = "2"
thiserror = "1"
transceiver-decode = { path = "../decode", default-features = false }
transceiver-messages = { path = "../messages" }
usdt = "0.3.5"

[dependencies.clap]
version = "4"
features = [ "derive" ]

[dependencies.nix]
version = "0.26"
features = [ "net" ]

[dependencies.schemars]
version = "0.8"
optional = true

[dependencies.slog]
version = "2"
features = [ "max_level_trace", "release_max_level_trace" ]

[dependencies.tokio]
version = "1"
features = [ "macros", "net", "rt", "rt-multi-thread", "sync", "time" ]

[build-dependencies]
version_check = "0.9"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
schemars = "0.8"
