[package]
name = "transceiver-controller"
version = "0.1.1"
edition = "2021"
default-run = "xcvradm"

[features]
api-traits = [ "dep:schemars", "transceiver-decode/api-traits", "transceiver-messages/api-traits" ]

[dependencies]
anyhow = "1"
hubpack = "0.1.2"
itertools = "0.14.0"
serde = "1"
slog-async = "2"
slog-term = "2"
tabled = "0.20"
thiserror = "2"
transceiver-decode = { path = "../decode", default-features = false }
transceiver-messages = { path = "../messages" }
usdt = "0.5.0"

[dependencies.clap]
version = "4"
features = [ "derive" ]

[dependencies.nix]
version = "0.30"
features = [ "net" ]

[dependencies.schemars]
version = "1.0"
optional = true

[dependencies.slog]
version = "2"
features = [ "max_level_trace", "release_max_level_trace" ]

[dependencies.tokio]
version = "1"
features = [ "macros", "net", "rt", "rt-multi-thread", "sync", "time" ]

[build-dependencies]
version_check = "0.9"

[dev-dependencies]
serde_json = "1"
schemars = "1.0"
tempfile = "3"
