[package]
name = "transceiver-decode"
version = "0.1.0"
edition = "2021"

[features]
api-traits = [ "dep:const_format", "dep:schemars", "dep:serde" ]

[dependencies]
static_assertions = "1.1.0"
transceiver-messages = { path = "../messages", features = [ "std" ] }
thiserror = "2"

[dependencies.const_format]
version = "0.2.34"
optional = true

[dependencies.schemars]
version = "0.8"
optional = true

[dependencies.serde]
version = "1"
optional = true

[dev-dependencies]
const_format = "0.2.34"
serde = "1"
serde_json = "1"
schemars = "0.8"
strum = { version = "0.26", features = [ "derive" ] }
