[package]
name = "transceiver-decode"
version = "0.1.0"
edition = "2021"

[features]
api-traits = [ "dep:schemars", "dep:serde" ]

[dependencies]
static_assertions = "1.1.0"
transceiver-messages = { path = "../messages", features = [ "std" ] }
thiserror = "2"

[dependencies.schemars]
version = "0.9"
optional = true

[dependencies.serde]
version = "1"
optional = true

[dev-dependencies]
serde = "1"
serde_json = "1"
schemars = "0.9"
strum = { version = "0.27", features = [ "derive" ] }
