[package]
name = "transceiver-messages"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2"
hubpack = "0.1.0"

[dependencies.clap]
version = "4"
optional = true

[dependencies.serde]
version = "1"
features = [ "derive" ]
default-features = false

[dependencies.thiserror]
version = "1"
optional = true

[features]
std = [ "dep:thiserror", "dep:clap" ]
default = [ "std" ]

[dev-dependencies]
thiserror = "1"
serde_json = "1"
