[package]
name = "transceiver-messages"
version = "0.1.1"
edition = "2021"

[dependencies]
bitflags = "2"
hubpack = "0.1.2"

[dependencies.clap]
version = "4"
features = [ "derive" ]
optional = true

[dependencies.schemars]
version = "0.8"
optional = true

[dependencies.serde]
version = "1"
features = [ "derive" ]
default-features = false

[dependencies.thiserror]
version = "1"
optional = true

[features]
api-traits = [ "std", "dep:schemars"]
default = [ "std" ]
std = [ "dep:thiserror", "dep:clap" ]

[dev-dependencies]
clap = "4"
schemars = "0.8"
serde_json = "1"
thiserror = "1"
